--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href="style.css">
     <title>Awesome page</title>
 </head>
 
@@ -19,38 +20,62 @@
     </div>
 
     <div class="hero-section-container">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower
-            contrast</p>
-        <button>Sign up</button>
-        <div class="placeholder-image">this is a placeholder for an image</div>
+        <div class="main-title">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is
+                lower
+                contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="main-image">
+            <div class="placeholder-image">this is a placeholder for an image</div>
+        </div>
     </div>
 
     <div class="random-info-container">
-        <h2>Some random information.</h2>
+        <div class="random-title">
+            <h2>Some random information.</h2>
+        </div>
         <div class="illustration-container">
-            <div class="pseudo-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="pseudo-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="pseudo-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-            <div class="pseudo-img"></div>
-            <p>this is some subtext under an illustration or image</p>
+            <div class="square-container">
+                <div class="pseudo-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="square-container">
+                <div class="pseudo-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="square-container">
+                <div class="pseudo-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="square-container">
+                <div class="pseudo-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 
     <div class="inspiring-quote-container">
-        <p>This is an insipiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-            people will actually read ir. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <div class='text-container'>
+            <div class="main-quote">This is an insipiring quote, or a testimonial from a customer. Maybe it's just
+                filling
+                up
+                space, or maybe
+                people will actually read ir. Who knows? All I know is that it looks nice.</div>
+            <div class="who-said-it">-Thor, God of Thunder</div>
+        </div>
     </div>
 
     <div class="call-to-action-container">
-        <div class="button-container">
-            <h3>Call to action! It's time!</h3>
-            <p>sign up for our product by clicking that button right over there</p>
-            <button>Sign up</button>
+        <div class="blue-container">
+            <div class="sign-up-container">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="button-container">
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
 
